--- a/index.html
+++ b/index.html
@@ -7,48 +7,92 @@
     <title>Dentist-clinic</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href=""
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&family=Montserrat:wght@100;200;300;400;500;600;700;800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
         integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
         crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="./css/main.min.css"> -->
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <header class="header section">
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__item">
-                    <a href="" class="nav__link">Головна/&nbsp;<span>Стоматологія</span></a>
+        <div class="header-wrapper container">
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="" class="nav__link">Стоматологія</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="" class="nav__link">Послуги</a>
+                    </li>
+                    <li class="nav__item">
+                        <a href="" class="nav__link">Наші лікарі</a>
+                    </li>
+                </ul>
+            </nav>
+            <button type="button" class="nav-menu" data-menu-button>
+                <svg class="nav-menu__icon">
+                    <use href="./img/sprite.svg#icon-menu-mobile"></use>
+                </svg>
+            </button>
+            <ul class="contact">
+                <li class="contact__item">
+                    <address>
+                        <svg class="contact__icon">
+                            <use href="./img/sprite.svg#icon-map"></use>
+                        </svg>
+                        м. Українка, вул. Промислова, 5
+                    </address>
                 </li>
-                <li class="nav__item">
-                    <a href="" class="nav__link">Послуги</a>
-                </li>
-                <li class="nav__item">
-                    <a href="" class="nav__link">Наші лікарі</a>
+                <li class="contact__item">
+                    <a href="tel:+380961111111" class="contact__link">
+                        <svg class="contact__icon">
+                            <use href="./img/sprite.svg#icon-phone"></use>
+                        </svg>
+                        +38 (096) 111 11 11
+                    </a>
+                    <p  class="contact__text">Щоденно з 9:00 до 20:00</p>
                 </li>
             </ul>
-        </nav>
-        <ul class="contact">
-            <li class="contact__item">
-                <address>
-                    <svg class="contact__icon" width="10" height="16">
-                        <use href="./img/sprite.svg#icon-map"></use>
-                    </svg>
-                    м. Українка, вул. Промислова, 5
-                </address>
-            </li>
-            <li class="contact__item">
-                <a href="tel:+380961111111" class="contact__link">
-                    <svg class="contact__icon" width="10" height="16">
-                        <use href="./img/sprite.svg#icon-phone"></use>
-                    </svg>
-                    +38 (096) 111 11 11
-                </a>
-                <p>Щоденно з 9:00 до 20:00</p>
-            </li>
-        </ul>
+        </div>
+        <div class="mobile-menu" data-menu>
+            <button class="mobile-menu__close-button" type="button" data-menu-close>
+                <svg class="mobile-menu__close-icon">
+                    <use href="./img/sprite.svg#icon-close"></use>
+                </svg>
+            </button>
+            <ul class="mobile-menu__list">
+                <li class="mobile-menu__item">
+                    <h2 class="mobile-menu__subtitle">
+                        Щоденно з 9:00 до 20:00
+                    </h2>
+                </li>
+                <li class="mobile-menu__item">
+                    <a href="tel:+380961111111" class="mobile-menu__link">
+                        <svg class="mobile-menu__icon">
+                            <use href="./img/sprite.svg#icon-phone"></use>
+                        </svg>
+                        +38 (096) 111 11 11
+                    </a>
+                </li>
+                <li class="mobile-menu__item">
+                    <address>
+                        <svg class="mobile-menu__icon">
+                            <use href="./img/sprite.svg#icon-map"></use>
+                        </svg>
+                        м. Українка,<br>вул. Промислова, 5
+                    </address>
+                </li>
+            </ul>
+        
+        </div>
+
     </header>
-    
+    <main>
+        <div class="container divr"></div>
+    </main>
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html>
