--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                     </li>
                 </ul>
             </nav>
-            <button type="button" class="nav-menu" data-menu-button>
-                <svg class="nav-menu__icon">
+            <button type="button" class="button-menu" data-menu-button>
+                <svg class="button-menu__icon">
                     <use href="./img/sprite.svg#icon-menu-mobile"></use>
                 </svg>
             </button>
@@ -62,6 +62,12 @@
                     <use href="./img/sprite.svg#icon-close"></use>
                 </svg>
             </button>
+            <address class="mobile-menu__address">
+                <svg class="mobile-menu__address-icon">
+                    <use href="./img/sprite.svg#icon-map"></use>
+                </svg>
+                м. Українка,<br>вул. Промислова, 5
+            </address>
             <ul class="mobile-menu__list">
                 <li class="mobile-menu__item">
                     <h2 class="mobile-menu__subtitle">
@@ -77,12 +83,9 @@
                     </a>
                 </li>
                 <li class="mobile-menu__item">
-                    <address>
-                        <svg class="mobile-menu__icon">
-                            <use href="./img/sprite.svg#icon-map"></use>
-                        </svg>
-                        м. Українка,<br>вул. Промислова, 5
-                    </address>
+                    <button class="entery__button">
+                        Записатися на консультацію
+                    </button>
                 </li>
             </ul>
         
@@ -90,7 +93,25 @@
 
     </header>
     <main>
-        <div class="container divr"></div>
+        <!-- =====================HERO======================== -->
+        <section class="hero section">
+            <div class="hero-wrapper container">
+                <div class="entery">
+                    <h1 class="entery__title">
+                        Багатофункціональна стоматологічна клініка для всієї родини
+                    </h1>
+                    <p class="entery__text">
+                        Імплантація зуба без болю за 30 хвилин із гарантією 12 місяців
+                    </p>
+                    <button class="entery__button">
+                        Записатися на консультацію
+                    </button>
+
+
+                </div>
+            
+            </div>
+        </section>
     </main>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
