--- a/index.html
+++ b/index.html
@@ -106,10 +106,124 @@
                     <button class="entery__button">
                         Записатися на консультацію
                     </button>
-
-
                 </div>
-            
+            </div>
+        </section>
+        <section class="team section">
+            <div class="team-card container">
+                <h2 class="team-card__title">Наші Лікарі</h2>
+                <ul class="card">
+                    <li class="card__item">
+                        <div class="card__wrapper">
+                            <picture>
+                                <source srcset="./img/desk/team-1.webp 1x, ./img/desk/team-1@2x.webp 2x"
+                                    media="(min-width: 1200px)" type="image/webp">
+                                <source srcset="./img/desk/team-1.jpg 1x, ./img/desk/team-1@2x.jpg 2x"
+                                    media="(min-width: 1200px)">
+                                <source srcset="./img/desk/team-1.webp 1x, ./img/desk/team-1@2x.webp 2x" media="(min-width: 768px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-1.jpg 1x, ./img/desk/team-1@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/desk/team-1.webp 1x, ./img/desk/team-1@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/desk/team-1.jpg 1x, ./img/desk/team-1@2x.jpg 2x"
+                                    src="./img/desk/team-1.jpg" alt="Лікар чоловік в масці" class="">
+                            </picture>
+                            <h3 class="card__subtitle">ПІБ</h3>
+                            <p class="card__text">Ортодонт, терапевт, парадонтолог</p>
+                            <button class="card__button">Записатись</button>
+                        </div>
+                    </li>
+                    <li class="card__item">
+                        <div class="card__wrapper">
+                            <picture>
+                                <source srcset="./img/desk/team-2.webp 1x, ./img/desk/team-2@2x.webp 2x" media="(min-width: 1200px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-2.jpg 1x, ./img/desk/team-2@2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./img/desk/team-2.webp 1x, ./img/desk/team-2@2x.webp 2x" media="(min-width: 768px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-2.jpg 1x, ./img/desk/team-2@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/desk/team-2.webp 1x, ./img/desk/team-2@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/desk/team-2.jpg 1x, ./img/desk/team-2@2x.jpg 2x" src="./img/desk/team-2.jpg"
+                                    alt="Лікар чоловік в масці" class="">
+                            </picture>
+                            <h3 class="card__subtitle">ПІБ</h3>
+                            <p class="card__text">Хірург-імплантолог</p>
+                            <button class="card__button">Записатись</button>
+                        </div>
+                    </li>
+                    <li class="card__item">
+                        <div class="card__wrapper">
+                            <picture>
+                                <source srcset="./img/desk/team-3.webp 1x, ./img/desk/team-3@2x.webp 2x" media="(min-width: 1200px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-3.jpg 1x, ./img/desk/team-3@2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./img/desk/team-3.webp 1x, ./img/desk/team-3@2x.webp 2x" media="(min-width: 768px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-3.jpg 1x, ./img/desk/team-3@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/desk/team-3.webp 1x, ./img/desk/team-3@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/desk/team-3.jpg 1x, ./img/desk/team-3@2x.jpg 2x" src="./img/desk/team-3.jpg"
+                                    alt="Лікар чоловік в масці" class="">
+                            </picture>
+                            <h3 class="card__subtitle">ПІБ</h3>
+                            <p class="card__text">Стоматолог-терапевт</p>
+                            <button class="card__button">Записатись</button>
+                        </div>
+                    </li>
+                    <li class="card__item">
+                        <div class="card__wrapper">
+                            <picture>
+                                <source srcset="./img/desk/team-4.webp 1x, ./img/desk/team-4@2x.webp 2x" media="(min-width: 1200px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-4.jpg 1x, ./img/desk/team-4@2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./img/desk/team-4.webp 1x, ./img/desk/team-4@2x.webp 2x" media="(min-width: 768px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-4.jpg 1x, ./img/desk/team-4@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/desk/team-4.webp 1x, ./img/desk/team-4@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/desk/team-4.jpg 4x, ./img/desk/team-4@2x.jpg 2x" src="./img/desk/team-4.jpg"
+                                    alt="Лікар чоловік в масці" class="">
+                            </picture>
+                            <h3 class="card__subtitle">ПІБ</h3>
+                            <p class="card__text">Ортодонт, терапевт, парадонтолог</p>
+                            <button class="card__button">Записатись</button>
+                        </div>
+                    </li>
+                    <li class="card__item">
+                        <div class="card__wrapper">
+                            <picture>
+                                <source srcset="./img/desk/team-5.webp 1x, ./img/desk/team-5@2x.webp 2x" media="(min-width: 1200px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-5.jpg 1x, ./img/desk/team-5@2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./img/desk/team-5.webp 1x, ./img/desk/team-5@2x.webp 2x" media="(min-width: 768px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-5.jpg 1x, ./img/desk/team-5@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/desk/team-5.webp 1x, ./img/desk/team-5@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/desk/team-5.jpg 1x, ./img/desk/team-5@2x.jpg 2x" src="./img/desk/team-5.jpg"
+                                    alt="Лікар чоловік в масці" class="">
+                            </picture>
+                            <h3 class="card__subtitle">ПІБ</h3>
+                            <p class="card__text">Хірург-імплантолог</p>
+                            <button class="card__button">Записатись</button>
+                        </div>
+                    </li>
+                    <li class="card__item">
+                        <div class="card__wrapper">
+                            <picture>
+                                <source srcset="./img/desk/team-6.webp 1x, ./img/desk/team-6@2x.webp 2x" media="(min-width: 1200px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-6.jpg 1x, ./img/desk/team-6@2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./img/desk/team-6.webp 1x, ./img/desk/team-6@2x.webp 2x" media="(min-width: 768px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/team-6.jpg 1x, ./img/desk/team-6@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/desk/team-6.webp 1x, ./img/desk/team-6@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/desk/team-6.jpg 1x, ./img/desk/team-6@2x.jpg 2x" src="./img/desk/team-6.jpg"
+                                    alt="Лікар чоловік в масці" class="">
+                            </picture>
+                            <h3 class="card__subtitle">ПІБ</h3>
+                            <p class="card__text">Стоматолог-терапевт</p>
+                            <button class="card__button">Записатись</button>
+                        </div>
+                    </li>
+                
+                </ul>
             </div>
         </section>
     </main>
