--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                 </div>
             </div>
         </section>
+        <!-- ======================================TEAM=================================== -->
         <section class="team section">
             <div class="team-card container">
                 <h2 class="team-card__title">Наші Лікарі</h2>
@@ -120,12 +121,12 @@
                                     media="(min-width: 1200px)" type="image/webp">
                                 <source srcset="./img/desk/team-1.jpg 1x, ./img/desk/team-1@2x.jpg 2x"
                                     media="(min-width: 1200px)">
-                                <source srcset="./img/desk/team-1.webp 1x, ./img/desk/team-1@2x.webp 2x" media="(min-width: 768px)"
+                                <source srcset="./img/tabl/team-1.webp 1x, ./img/tabl/team-1@2x.webp 2x" media="(min-width: 768px)"
                                     type="image/webp">
-                                <source srcset="./img/desk/team-1.jpg 1x, ./img/desk/team-1@2x.jpg 2x" media="(min-width: 768px)">
-                                <source srcset="./img/desk/team-1.webp 1x, ./img/desk/team-1@2x.webp 2x" type="image/webp">
-                                <img srcset="./img/desk/team-1.jpg 1x, ./img/desk/team-1@2x.jpg 2x"
-                                    src="./img/desk/team-1.jpg" alt="Лікар чоловік в масці" class="">
+                                <source srcset="./img/tabl/team-1.jpg 1x, ./img/tabl/team-1@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mob/team-1.webp 1x, ./img/mob/team-1@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/mob/team-1.jpg 1x, ./img/mob/team-1@2x.jpg 2x"
+                                    src="./img/mob/team-1.jpg" alt="Лікар чоловік в масці" class="">
                             </picture>
                             <h3 class="card__subtitle">ПІБ</h3>
                             <p class="card__text">Ортодонт, терапевт, парадонтолог</p>
@@ -138,11 +139,11 @@
                                 <source srcset="./img/desk/team-2.webp 1x, ./img/desk/team-2@2x.webp 2x" media="(min-width: 1200px)"
                                     type="image/webp">
                                 <source srcset="./img/desk/team-2.jpg 1x, ./img/desk/team-2@2x.jpg 2x" media="(min-width: 1200px)">
-                                <source srcset="./img/desk/team-2.webp 1x, ./img/desk/team-2@2x.webp 2x" media="(min-width: 768px)"
+                                <source srcset="./img/tabl/team-2.webp 1x, ./img/tabl/team-2@2x.webp 2x" media="(min-width: 768px)"
                                     type="image/webp">
-                                <source srcset="./img/desk/team-2.jpg 1x, ./img/desk/team-2@2x.jpg 2x" media="(min-width: 768px)">
-                                <source srcset="./img/desk/team-2.webp 1x, ./img/desk/team-2@2x.webp 2x" type="image/webp">
-                                <img srcset="./img/desk/team-2.jpg 1x, ./img/desk/team-2@2x.jpg 2x" src="./img/desk/team-2.jpg"
+                                <source srcset="./img/tabl/team-2.jpg 1x, ./img/tabl/team-2@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mob/team-2.webp 1x, ./img/mob/team-2@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/mob/team-2.jpg 1x, ./img/mob/team-2@2x.jpg 2x" src="./img/mob/team-2.jpg"
                                     alt="Лікар чоловік в масці" class="">
                             </picture>
                             <h3 class="card__subtitle">ПІБ</h3>
@@ -156,11 +157,11 @@
                                 <source srcset="./img/desk/team-3.webp 1x, ./img/desk/team-3@2x.webp 2x" media="(min-width: 1200px)"
                                     type="image/webp">
                                 <source srcset="./img/desk/team-3.jpg 1x, ./img/desk/team-3@2x.jpg 2x" media="(min-width: 1200px)">
-                                <source srcset="./img/desk/team-3.webp 1x, ./img/desk/team-3@2x.webp 2x" media="(min-width: 768px)"
+                                <source srcset="./img/tabl/team-3.webp 1x, ./img/tabl/team-3@2x.webp 2x" media="(min-width: 768px)"
                                     type="image/webp">
-                                <source srcset="./img/desk/team-3.jpg 1x, ./img/desk/team-3@2x.jpg 2x" media="(min-width: 768px)">
-                                <source srcset="./img/desk/team-3.webp 1x, ./img/desk/team-3@2x.webp 2x" type="image/webp">
-                                <img srcset="./img/desk/team-3.jpg 1x, ./img/desk/team-3@2x.jpg 2x" src="./img/desk/team-3.jpg"
+                                <source srcset="./img/tabl/team-3.jpg 1x, ./img/tabl/team-3@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mob/team-3.webp 1x, ./img/mob/team-3@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/mob/team-3.jpg 1x, ./img/mob/team-3@2x.jpg 2x" src="./img/mob/team-3.jpg"
                                     alt="Лікар чоловік в масці" class="">
                             </picture>
                             <h3 class="card__subtitle">ПІБ</h3>
@@ -174,11 +175,11 @@
                                 <source srcset="./img/desk/team-4.webp 1x, ./img/desk/team-4@2x.webp 2x" media="(min-width: 1200px)"
                                     type="image/webp">
                                 <source srcset="./img/desk/team-4.jpg 1x, ./img/desk/team-4@2x.jpg 2x" media="(min-width: 1200px)">
-                                <source srcset="./img/desk/team-4.webp 1x, ./img/desk/team-4@2x.webp 2x" media="(min-width: 768px)"
+                                <source srcset="./img/tabl/team-4.webp 1x, ./img/tabl/team-4@2x.webp 2x" media="(min-width: 768px)"
                                     type="image/webp">
-                                <source srcset="./img/desk/team-4.jpg 1x, ./img/desk/team-4@2x.jpg 2x" media="(min-width: 768px)">
-                                <source srcset="./img/desk/team-4.webp 1x, ./img/desk/team-4@2x.webp 2x" type="image/webp">
-                                <img srcset="./img/desk/team-4.jpg 4x, ./img/desk/team-4@2x.jpg 2x" src="./img/desk/team-4.jpg"
+                                <source srcset="./img/tabl/team-4.jpg 1x, ./img/tabl/team-4@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mob/team-4.webp 1x, ./img/mob/team-4@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/mob/team-4.jpg 4x, ./img/mob/team-4@2x.jpg 2x" src="./img/mob/team-4.jpg"
                                     alt="Лікар чоловік в масці" class="">
                             </picture>
                             <h3 class="card__subtitle">ПІБ</h3>
@@ -192,11 +193,11 @@
                                 <source srcset="./img/desk/team-5.webp 1x, ./img/desk/team-5@2x.webp 2x" media="(min-width: 1200px)"
                                     type="image/webp">
                                 <source srcset="./img/desk/team-5.jpg 1x, ./img/desk/team-5@2x.jpg 2x" media="(min-width: 1200px)">
-                                <source srcset="./img/desk/team-5.webp 1x, ./img/desk/team-5@2x.webp 2x" media="(min-width: 768px)"
+                                <source srcset="./img/tabl/team-5.webp 1x, ./img/tabl/team-5@2x.webp 2x" media="(min-width: 768px)"
                                     type="image/webp">
-                                <source srcset="./img/desk/team-5.jpg 1x, ./img/desk/team-5@2x.jpg 2x" media="(min-width: 768px)">
-                                <source srcset="./img/desk/team-5.webp 1x, ./img/desk/team-5@2x.webp 2x" type="image/webp">
-                                <img srcset="./img/desk/team-5.jpg 1x, ./img/desk/team-5@2x.jpg 2x" src="./img/desk/team-5.jpg"
+                                <source srcset="./img/tabl/team-5.jpg 1x, ./img/tabl/team-5@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mob/team-5.webp 1x, ./img/mob/team-5@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/mob/team-5.jpg 1x, ./img/mob/team-5@2x.jpg 2x" src="./img/mob/team-5.jpg"
                                     alt="Лікар чоловік в масці" class="">
                             </picture>
                             <h3 class="card__subtitle">ПІБ</h3>
@@ -210,11 +211,11 @@
                                 <source srcset="./img/desk/team-6.webp 1x, ./img/desk/team-6@2x.webp 2x" media="(min-width: 1200px)"
                                     type="image/webp">
                                 <source srcset="./img/desk/team-6.jpg 1x, ./img/desk/team-6@2x.jpg 2x" media="(min-width: 1200px)">
-                                <source srcset="./img/desk/team-6.webp 1x, ./img/desk/team-6@2x.webp 2x" media="(min-width: 768px)"
+                                <source srcset="./img/tabl/team-6.webp 1x, ./img/tabl/team-6@2x.webp 2x" media="(min-width: 768px)"
                                     type="image/webp">
-                                <source srcset="./img/desk/team-6.jpg 1x, ./img/desk/team-6@2x.jpg 2x" media="(min-width: 768px)">
-                                <source srcset="./img/desk/team-6.webp 1x, ./img/desk/team-6@2x.webp 2x" type="image/webp">
-                                <img srcset="./img/desk/team-6.jpg 1x, ./img/desk/team-6@2x.jpg 2x" src="./img/desk/team-6.jpg"
+                                <source srcset="./img/tabl/team-6.jpg 1x, ./img/tabl/team-6@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mob/team-6.webp 1x, ./img/mob/team-6@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/mob/team-6.jpg 1x, ./img/mob/team-6@2x.jpg 2x" src="./img/mob/team-6.jpg"
                                     alt="Лікар чоловік в масці" class="">
                             </picture>
                             <h3 class="card__subtitle">ПІБ</h3>
@@ -222,8 +223,32 @@
                             <button class="card__button">Записатись</button>
                         </div>
                     </li>
-                
                 </ul>
+            </div>
+        </section>
+<!-- =====================================ABOUT============================================== -->
+        <section class="about section">
+            <div class="about-wrapper container">
+                <div class="preview-img">
+                    <picture>
+                        <source srcset="./img/desk/preview.webp 1x, ./img/desk/preview@2x.webp 2x" media="(min-width: 1200px)"
+                            type="image/webp">
+                        <source srcset="./img/desk/preview.jpg 1x, ./img/desk/preview@2x.jpg 2x" media="(min-width: 1200px)">
+                        <source srcset="./img/tabl/preview.webp 1x, ./img/tabl/preview@2x.webp 2x" media="(min-width: 768px)"
+                            type="image/webp">
+                        <source srcset="./img/tabl/preview.jpg 1x, ./img/tabl/preview@2x.jpg 2x" media="(min-width: 768px)">
+                        <source srcset="./img/mob/preview.webp 1x, ./img/mob/preview@2x.webp 2x" type="image/webp">
+                        <img srcset="./img/mob/preview.jpg 1x, ./img/mob/preview@2x.jpg 2x" src="./img/desk/preview.jpg"
+                            alt="Лікар чоловік в масці" class="">
+                    </picture>
+
+                </div>
+                <div class="info">
+                    <h3>Про нашу клініку</h3>
+                    <p>Багатофункціональна стоматологічна клініка відкрилася у 2019 році. Одні з найкращих фахівців м. Астани готові допомогти
+                    кожному члену Вашої родини за допомогою найновішого сучасного обладнання та стоматологічних матеріалів 21 століття. .
+                    Наше завдання – забезпечити комфорт та позитивний настрій нашим пацієнтам, як під час лікування, так і після нього.</p>
+                </div>
             </div>
         </section>
     </main>
