--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         Імплантація зуба без болю за 30 хвилин із гарантією 12 місяців
                     </p>
                     <button class="entery__button">
-                        Записатися на консультацію
+                        Записатись на консультацію
                     </button>
                 </div>
             </div>
@@ -229,8 +229,8 @@
 <!-- =====================================ABOUT============================================== -->
         <section class="about section">
             <div class="about-wrapper container">
-                <div class="preview-img">
-                    <picture>
+                <div class="preview">
+                    <picture class="preview__img">
                         <source srcset="./img/desk/preview.webp 1x, ./img/desk/preview@2x.webp 2x" media="(min-width: 1200px)"
                             type="image/webp">
                         <source srcset="./img/desk/preview.jpg 1x, ./img/desk/preview@2x.jpg 2x" media="(min-width: 1200px)">
@@ -239,17 +239,44 @@
                         <source srcset="./img/tabl/preview.jpg 1x, ./img/tabl/preview@2x.jpg 2x" media="(min-width: 768px)">
                         <source srcset="./img/mob/preview.webp 1x, ./img/mob/preview@2x.webp 2x" type="image/webp">
                         <img srcset="./img/mob/preview.jpg 1x, ./img/mob/preview@2x.jpg 2x" src="./img/desk/preview.jpg"
-                            alt="Лікар чоловік в масці" class="">
+                            alt="Лікар" class="">
                     </picture>
 
                 </div>
                 <div class="info">
-                    <h3>Про нашу клініку</h3>
-                    <p>Багатофункціональна стоматологічна клініка відкрилася у 2019 році. Одні з найкращих фахівців м. Астани готові допомогти
+                    <h3 class="info__title">Про нашу клініку</h3>
+                    <p class="info__text">Багатофункціональна стоматологічна клініка відкрилася у 2019 році. Одні з найкращих фахівців готові допомогти
                     кожному члену Вашої родини за допомогою найновішого сучасного обладнання та стоматологічних матеріалів 21 століття. .
                     Наше завдання – забезпечити комфорт та позитивний настрій нашим пацієнтам, як під час лікування, так і після нього.</p>
                 </div>
             </div>
+            <!-- <div class="about-wrapper container">
+                <ul class="aaa__list">
+                    <li class="aaa__item">
+                        <div class="preview">
+                            <picture class="preview__img">
+                                <source srcset="./img/desk/preview.webp 1x, ./img/desk/preview@2x.webp 2x" media="(min-width: 1200px)"
+                                    type="image/webp">
+                                <source srcset="./img/desk/preview.jpg 1x, ./img/desk/preview@2x.jpg 2x" media="(min-width: 1200px)">
+                                <source srcset="./img/tabl/preview.webp 1x, ./img/tabl/preview@2x.webp 2x" media="(min-width: 768px)"
+                                    type="image/webp">
+                                <source srcset="./img/tabl/preview.jpg 1x, ./img/tabl/preview@2x.jpg 2x" media="(min-width: 768px)">
+                                <source srcset="./img/mob/preview.webp 1x, ./img/mob/preview@2x.webp 2x" type="image/webp">
+                                <img srcset="./img/mob/preview.jpg 1x, ./img/mob/preview@2x.jpg 2x" src="./img/desk/preview.jpg" alt="Лікар"
+                                    class="">
+                            </picture>
+                    </li>
+                    <li class="aaa__item">
+                        <h3 class="info__title">Про нашу клініку</h3>
+                        <p class="info__text">Багатофункціональна стоматологічна клініка відкрилася у 2019 році. Одні з найкращих фахівців
+                            готові допомогти
+                            кожному члену Вашої родини за допомогою найновішого сучасного обладнання та стоматологічних матеріалів 21 століття.
+                            .
+                            Наше завдання – забезпечити комфорт та позитивний настрій нашим пацієнтам, як під час лікування, так і після нього.
+                        </p>
+                    </li>
+                </ul>
+            </div> -->
         </section>
     </main>
     <script src="./js/modal.js"></script>
