--- a/index.html
+++ b/index.html
@@ -248,7 +248,196 @@
                 </div>
             </div>
         </section>
+        <section class="reviews section">
+            <div class="reviews-card" id="carousel" data-auto="true">
+                <ul class="reviews-card__list" id="scene">
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-1.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-2.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-3.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-1.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-2.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-3.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-1.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-2.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-3.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-1.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-2.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="reviews-card__item carousel_item">
+                        <div class="r__wrapper">
+                            <div class="r__item">
+                                <h4 class="r__title">Lorem Lorem</h4>
+                                <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere
+                                    voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore
+                                    blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                            </div>
+                            <div class="r__item">
+                                <img src="./img/desk/reviews-3.jpg" alt="" class="r__img">
+                                <p class="r__img-text">ПІБ</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+                <div id="carousel_btn">
+                    <button class="btn prev">+</button>
+                    <button class="btn next">-</button>
+                </div>
+            </div>
+            <!-- <div class="r__wrapper">
+                <div class="r__item">
+                    <h4 class="r__title">Lorem Lorem</h4>
+                    <p class="r__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates quae sequi facere voluptatum asperiores, dolorem delectus, odio sint recusandae fugit nostrum corrupti aspernatur tempore blanditiis, deserunt rerum nam voluptatem dicta!</p>
+                </div>
+                <div class="r__item">
+                    <img src="./img/desk/reviews-1.jpg" alt="" class="r__img">
+                    <p class="r__img-text">ПІБ</p>
+                </div>
+            </div> -->
+        </section>
     </main>
+    <script src="./js/carousel.js"></script>
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
 </body>
