--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </a>
                 </li>
                 <li class="mobile-menu__item">
-                    <button class="entery__button">
+                    <button class="entery__button" data-mobile-modal-open>
                         Записатися на консультацію
                     </button>
                 </li>
