--- a/index.html
+++ b/index.html
@@ -258,100 +258,107 @@
         </section>
     <!-- ===================================== REVIEWS ============================================== -->
         <section class="reviews section swiper-container">
-            <h1 class="reviews__title">Почитайте відгуки задоволених клієнтів</h1>
-            <ul class="swiper-wrapper">
-                <li class="swiper-slide">
-                    <div class="frame">
-                        <div class="frame-text">
-                            <img src="./img/rev.png" alt="" class="frame-text__png">
-                            <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
-                                reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat, molestiae
-                                voluptas architecto incidunt et iste?</p>
-                        </div>
-                        <div class="frame-img">
-                            <img src="./img/desk/reviews-1.jpg" alt="" class="frame-img__img">
-                            <h3 class="frame-img__title">Lorem Ipsum</h3>
-                        </div>
-                    </div>
-                </li>
-                <li class="swiper-slide">
-                    <div class="frame">
-                        <div class="frame-text">
-                            <img src="./img/rev.png" alt="" class="frame-text__png">
-                            <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
-                                reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat, molestiae
-                                voluptas architecto incidunt et iste?</p>
-                        </div>
-                        <div class="frame-img">
-                            <img src="./img/desk/reviews-2.jpg" alt="" class="frame-img__img">
-                            <h3 class="frame-img__title">Lorem Ipsum</h3>
-                        </div>
-                    </div>
-                </li>
-                <li class="swiper-slide">
-                    <div class="frame">
-                        <div class="frame-text">
-                            <img src="./img/rev.png" alt="" class="frame-text__png">
-                            <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
-                                reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat, molestiae
-                                voluptas architecto incidunt et iste?</p>
-                        </div>
-                        <div class="frame-img">
-                            <img src="./img/desk/reviews-3.jpg" alt="" class="frame-img__img">
-                            <h3 class="frame-img__title">Lorem Ipsum</h3>
-                        </div>
-                    </div>
-                </li>
-                <li class="swiper-slide">
-                    <div class="frame">
-                        <div class="frame-text">
-                            <img src="./img/rev.png" alt="" class="frame-text__png">
-                            <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
-                                reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat, molestiae
-                                voluptas architecto incidunt et iste?</p>
-                        </div>
-                        <div class="frame-img">
-                            <img src="./img/desk/reviews-1.jpg" alt="" class="frame-img__img">
-                            <h3 class="frame-img__title">Lorem Ipsum</h3>
-                        </div>
-                    </div>
-                </li>
-                <li class="swiper-slide">
-                    <div class="frame">
-                        <div class="frame-text">
-                            <img src="./img/rev.png" alt="" class="frame-text__png">
-                            <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
-                                reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat, molestiae
-                                voluptas architecto incidunt et iste?</p>
-                        </div>
-                        <div class="frame-img">
-                            <img src="./img/desk/reviews-2.jpg" alt="" class="frame-img__img">
-                            <h3 class="frame-img__title">Lorem Ipsum</h3>
-                        </div>
-                    </div>
-                </li>
-                <li class="swiper-slide">
-                    <div class="frame">
-                        <div class="frame-text">
-                            <img src="./img/rev.png" alt="" class="frame-text__png">
-                            <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
-                                reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat, molestiae
-                                voluptas architecto incidunt et iste?</p>
-                        </div>
-                        <div class="frame-img">
-                            <img src="./img/desk/reviews-3.jpg" alt="" class="frame-img__img">
-                            <h3 class="frame-img__title">Lorem Ipsum</h3>
-                        </div>
-                    </div>
-                </li>
             
-            </ul>
-            <div class="reviews-button">
-                <button class="btn btn-prev"><
-                </button>
-                <button class="btn btn-next">>
-                </button>
-            </div>
+                <h1 class="reviews__title">Почитайте відгуки задоволених клієнтів</h1>
+                <ul class="swiper-wrapper">
+                    <li class="swiper-slide">
+                        <div class="frame">
+                            <div class="frame-text">
+                                <img src="./img/rev.png" alt="" class="frame-text__png">
+                                <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
+                                    reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat,
+                                    molestiae
+                                    voluptas architecto incidunt et iste?</p>
+                            </div>
+                            <div class="frame-img">
+                                <img src="./img/desk/reviews-1.jpg" alt="" class="frame-img__img">
+                                <h3 class="frame-img__title">Lorem Ipsum</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="frame">
+                            <div class="frame-text">
+                                <img src="./img/rev.png" alt="" class="frame-text__png">
+                                <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
+                                    reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat,
+                                    molestiae
+                                    voluptas architecto incidunt et iste?</p>
+                            </div>
+                            <div class="frame-img">
+                                <img src="./img/desk/reviews-2.jpg" alt="" class="frame-img__img">
+                                <h3 class="frame-img__title">Lorem Ipsum</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="frame">
+                            <div class="frame-text">
+                                <img src="./img/rev.png" alt="" class="frame-text__png">
+                                <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
+                                    reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat,
+                                    molestiae
+                                    voluptas architecto incidunt et iste?</p>
+                            </div>
+                            <div class="frame-img">
+                                <img src="./img/desk/reviews-3.jpg" alt="" class="frame-img__img">
+                                <h3 class="frame-img__title">Lorem Ipsum</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="frame">
+                            <div class="frame-text">
+                                <img src="./img/rev.png" alt="" class="frame-text__png">
+                                <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
+                                    reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat,
+                                    molestiae
+                                    voluptas architecto incidunt et iste?</p>
+                            </div>
+                            <div class="frame-img">
+                                <img src="./img/desk/reviews-1.jpg" alt="" class="frame-img__img">
+                                <h3 class="frame-img__title">Lorem Ipsum</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="frame">
+                            <div class="frame-text">
+                                <img src="./img/rev.png" alt="" class="frame-text__png">
+                                <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
+                                    reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat,
+                                    molestiae
+                                    voluptas architecto incidunt et iste?</p>
+                            </div>
+                            <div class="frame-img">
+                                <img src="./img/desk/reviews-2.jpg" alt="" class="frame-img__img">
+                                <h3 class="frame-img__title">Lorem Ipsum</h3>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="swiper-slide">
+                        <div class="frame">
+                            <div class="frame-text">
+                                <img src="./img/rev.png" alt="" class="frame-text__png">
+                                <p class="frame-text__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam ex blanditiis
+                                    reprehenderit, explicabo culpa minima facere quis, ab fuga aperiam iure est. Maxime fugiat,
+                                    molestiae
+                                    voluptas architecto incidunt et iste?</p>
+                            </div>
+                            <div class="frame-img">
+                                <img src="./img/desk/reviews-3.jpg" alt="" class="frame-img__img">
+                                <h3 class="frame-img__title">Lorem Ipsum</h3>
+                            </div>
+                        </div>
+                    </li>
+                
+                </ul>
+                <div class="reviews-button">
+                    <button class="btn btn-prev">
+                        < </button>
+                            <button class="btn btn-next">>
+                            </button>
+                </div>
         </section>
     </main>
 
